<resources>
    <string name="app_name">GiveMeFive</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_name_hint">手机/邮箱/会员名</string>
    <string name="login_pwd_hint">登录密码</string>
    <string name="login_button_text">登录</string>
    <string name="register_text">注册</string>
    <string name="forget_pwd_tip">忘记密码？</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="third_party_account_login">第三方账户登录</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="register_button_text">注册</string>
    <string name="login_text">请登录</string>
    <string name="login_tip">已有账号？</string>
    <string name="code">验证码</string>
    <string name="code_obtain">获取验证码</string>
    <string name="register_pwd">密码</string>
    <string name="register_pwd_again">再次输入密码</string>
    <string name="register_tip">同意用户</string>
    <string name="register_protocol">《注册协议》</string>
    <string name="register_complete">完成</string>
    <string name="verification_code">验证码</string>
    <string name="make_sure">确认</string>
    <string name="get_back_pwd_tip">系统会发送短信验证码到您的手机号，为了您的资金安全，请尽快查收。</string>

    <string name="my_service_phone">客服热线</string>
    <string name="my_service_online">在线客服</string>
    <string name="my_service_weixin">微信服务</string>
    <string name="my_service_read">购买须知</string>

    <string name="feedback_orders">订单问题</string>
    <string name="feedback_others">其他问题</string>
    <string name="feedback_question_tip">请描述您的问题...</string>
    <string name="feedback_tip">请填写正确的手机号码，以便我们尽快联系到您。</string>
    <string name="send_feedback">提交反馈</string>

</resources>
