<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginTop="40dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <android.letus179.com.givemefive.ClearEditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/login_name_hint"
            android:maxLines="1"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"/>

        <android.letus179.com.givemefive.ClearEditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="@string/login_button_text"
            android:textColor="@color/button_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:text="@string/register_text"
                android:textColor="@color/login_tip"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/forget_pwd_tip"/>

            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:text="@string/retrieve_pwd"
                android:textColor="@color/login_tip"/>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/other_way_login"/>

</LinearLayout>