<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="top"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/my_sug_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/feedback_orders"/>

        <RadioButton
            android:id="@+id/my_sug_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"
            android:text="@string/feedback_others"/>

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape">

        <android.letus179.com.givemefive.edit.ClearEditText
            android:id="@+id/my_sug_input"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/feedback_question_tip"
            android:maxLength="350"
            android:minLines="6"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/my_sug_input_num_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:textSize="12sp"/>
    </RelativeLayout>


    <android.letus179.com.givemefive.edit.ClearEditText
        android:id="@+id/my_sug_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:background="@color/gainsboro"
        android:hint="@string/input_phone_num"
        android:inputType="number"
        android:maxLength="11"
        android:textSize="14dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:text="@string/feedback_tip"/>

    <Button
        android:id="@+id/my_sug_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:text="@string/send_feedback"/>
</LinearLayout>